# claudio-investigator

./: .env.example  .gitignore  CLAUDE.md  CLAUDIO_INVESTIGATOR_DEV_PLAN_1.md  LICENSE  LICENSE-data  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: investigate.yml  remove.yml
.github/workflows/: build-index.yml  investigate.yml  manual-investigate.yml  reinvestigate.yml
analysis/: README.md  calibration_set.json  eda.py  human_controls.template.json  marker_priors.json
analysis/soul-over-ai/: COMMIT.txt  README.md
data/: investigations.jsonl
docs/: BULK_RUN_PLAN.md  CALIBRATION_NOTES.md  ITTY_BITTY_LIVING_SPACE.md  METHODOLOGY.md  SIGNALS.md
investigator/: __init__.py  agent.py  budget.py  github_io.py  main.py  rubric.py  schema.py
investigator/tools/: __init__.py  _http.py  deezer.py  discogs.py  genius.py  itunes.py  lastfm.py  musicbrainz.py  spotify.py  vision.py  youtube.py
scripts/: backfill_ledger.py
src/: .gitkeep
tests/: conftest.py  test_agent.py  test_rubric.py  test_tools.py
tests/fixtures/: .gitkeep  README.md  deezer_empty.json  deezer_found.json  deezer_top_tracks.json  discogs_empty_search.json  discogs_releases_digital_only.json  discogs_releases_mixed.json  discogs_search.json  genius_artist_songs.json  genius_empty_search.json  genius_search.json  itunes_lookup_huge_catalog.json  itunes_lookup_known_ai.json  itunes_lookup_known_human.json  itunes_search_known_ai.json  itunes_search_known_human.json  lastfm_artist_ai_tagged.json  lastfm_artist_found.json  musicbrainz_artist_full.json  musicbrainz_empty.json  (+14 more)
(+1 files in other folders)
